# cphoton

./: .bazelrc  .clang-format  .gitignore  Fractals3D.h  MODULE.bazel  Makefile  Material.h  MengerCube.h  PolyhedralModels.c  PolyhedralModels.h  README.md  Ray.c  Ray.h  RayTracer.h  RayTracer.m  Scene.c  main.m
.github/workflows/: c-build.yml
Utility/: Matrix3.c  Utility.c  Utility.h
benchmark/: BUILD.bazel  BenchmarkVector3.cpp
data/: demo1.yaml  plane-render.yaml
driver/: BUILD.bazel  Makefile
driver/yaml/: SceneGenerator.cpp  SceneGenerator.hpp  YAMLParser.cpp
examples/: BUILD.bazel  BatCave.c  BatCave.cpp  Makefile  MengerCube.c  MengerCube.cpp  Spheres.C  batcave  menger-cube
examples/CSG/: BUILD.bazel  CSGDifference.cpp  CSGIntersection.cpp  CSGUnion.cpp  CubeDifference.cpp  CubeIntersection.cpp  CubeSphereDifference.cpp  CubeUnion.cpp  Hemisphere.cpp
examples/yaml/: plane-render.yaml
lib/: BUILD.bazel  CPhoton.h  Makefile
lib/dict/: Dictionary.c  Dictionary.h  KeyValue.c  KeyValue.h
lib/engine/: AABB.cpp  AABB.hpp  CLIOptions.cpp  CLIOptions.hpp  CSGInterval.c  CSGInterval.h  CSGIntervalList.c  CSGIntervalList.h  CSGPrimitive.c  CSGPrimitive.h  Camera.c  Camera.cpp  Camera.h  Camera.hpp  Hit.cpp  Hit.hpp  HitRec.c  HitRec.h  HitRec.hpp  Material.c  Material.h  PhotonEngine.cpp  PhotonEngine.hpp  PhotonEngineImpl.c  PhotonEngineImpl.cpp  PhotonEngineImpl.h  PhotonEngineImpl.hpp  Primitive.c  Primitive.h  Ray.c  Ray.cpp  Ray.h  Ray.hpp  RayTracer.c  RayTracer.cpp  RayTracer.h  RayTracer.hpp  RenderSettings.c  RenderSettings.cpp  RenderSettings.h  (+15 more)
lib/logger/: Logger.c  Logger.h
lib/models/: Fractals3D.c  Fractals3D.h  MengerCube.c  MengerCube.cpp  MengerCube.h  MengerCube.hpp  PolyhedralModels.c  PolyhedralModels.h
lib/threadpool/: ThreadPool.c  ThreadPool.h  ThreadTask.c  ThreadUtils.cpp  ThreadUtils.h
lib/utility/: MathMacros.h  Matrix3.c  Matrix3.cpp  Matrix3.h  Matrix3.hpp  PPMWriter.c  PPMWriter.cpp  PPMWriter.h  PPMWriter.hpp  Randomizer.c  Randomizer.h  Utility.c  Utility.h  Vector3.c  Vector3.cpp  Vector3.h  Vector3.hpp
lib/yaml/: Makefile  SceneGenerator.cpp  SceneGenerator.hpp  TestFile.yaml  YAMLParser.cpp  YAMLParser.hpp  main.cpp  simple-render.ppm
src/: Camera.c  Camera.h  Fractals3D.c  HitRec.c  MengerCube.c  Primitive.h
src/Utility/: Matrix3.c  Matrix3.h  PPMWriter.c  PPMWriter.h  PPMWriter.m  Vector3.c  Vector3.h
src/demo/: DemoScenes.c  DemoScenes.h  DemoScenes.m
src/dict/: KeyValue.c
src/driver/: main.c  main.m
src/engine/: Camera.c  Camera.h  HitRec.h  Material.c  Material.h  Ray.h  (+8 more)
test/: BUILD.bazel  TestCSGInterval.cpp  TestCSGPrimitive.cpp  TestCamera.cpp  TestRandomizer.cpp  TestSpan.cpp  TestSpanList.cpp  TestVector3.cpp  demo.cpp
yaml/: BUILD.bazel  SceneGenerator.cpp  SceneGenerator.hpp  YAMLParser.hpp  main.cpp
(+52 files in other folders)
