cc_binary(
    name = "batcave",
    srcs = ["BatCave.cpp"],
    deps = [
        "//lib:cphoton"
    ],
    visibility = ["//visibility:private"]
)


cc_binary(
    name = "menger-cube",
    srcs = ["MengerCube.cpp"],
    deps = [
        "//lib:cphoton"
    ],
    visibility = ["//visibility:private"]
)


cc_binary(
    name = "spheres",
    srcs = ["Spheres.c"],
    deps = [
        "//lib:cphoton"
    ],
    visibility = ["//visibility:private"]
)