cc_binary(
    name = "CSGDifference",
    srcs = ["CSGDifference.cpp"],
    deps = [
        "//lib:cphoton"
    ],
    visibility = ["//visibility:private"]
)

cc_binary(
    name = "CSGUnion",
    srcs = ["CSGUnion.cpp"],
    deps = [
        "//lib:cphoton"
    ],
    visibility = ["//visibility:private"]
)


cc_binary(
    name = "CSGIntersection",
    srcs = ["CSGIntersection.cpp"],
    deps = [
        "//lib:cphoton"
    ],
    visibility = ["//visibility:private"]
)