cc_binary(
    name = "CubeDifference",
    srcs = ["CubeDifference.cpp"],
    deps = [
        "//lib:cphoton"
    ],
    visibility = ["//visibility:private"]
)


cc_binary(
    name = "CubeUnion",
    srcs = ["CubeUnion.cpp"],
    deps = [
        "//lib:cphoton"
    ],
    visibility = ["//visibility:private"]
)


cc_binary(
    name = "CubeIntersection",
    srcs = ["CubeIntersection.cpp"],
    deps = [
        "//lib:cphoton"
    ],
    visibility = ["//visibility:private"]
)


cc_binary(
    name = "CubeSphereDifference",
    srcs = ["CubeSphereDifference.cpp"],
    deps = [
        "//lib:cphoton"
    ],
    visibility = ["//visibility:private"]
)